--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -43,7 +43,28 @@
 
   .right {
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
   }
+
+  .imgContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #140e2d;
+    border-radius: 50px;
+    width: 80%;
+    height: 50%;
+  }
+
+  .bot {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
   .orbital {
     position: absolute;
     bottom: 0;
