--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -57,12 +57,24 @@
     border-radius: 50px;
     width: 80%;
     height: 50%;
+    position: relative;
+  }
+
+  .bgContainer {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 50px;
   }
 
   .bot {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    animation: 3s ease-in-out infinite alternate botAnimate;
   }
 
   .orbital {
@@ -80,5 +92,14 @@
   }
   100% {
     transform: rotate(60deg);
+  }
+}
+
+@keyframes botAnimate {
+  0% {
+    transform: scale(1) rotate(0deg);
+  }
+  100% {
+    transform: scale(1.1) rotate(-5deg);
   }
 }
