--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -68,6 +68,15 @@
     top: 0;
     left: 0;
     border-radius: 50px;
+
+    .bg {
+      background-image: url("/bg.png");
+      opacity: 0.2;
+      width: 200%;
+      height: 100%;
+      background-size: auto 100%;
+      animation: 8s ease-in-out infinite alterate slideBg;
+    }
   }
 
   .bot {
@@ -101,5 +110,14 @@
   }
   100% {
     transform: scale(1.1) rotate(-5deg);
+  }
+}
+
+@keyframes slideBg {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
   }
 }
