--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -69,14 +69,14 @@
     left: 0;
     border-radius: 50px;
 
-    .bg {
-      background-image: url("/bg.png");
-      opacity: 0.2;
-      width: 200%;
-      height: 100%;
-      background-size: auto 100%;
-      animation: 8s ease-in-out infinite alterate slideBg;
-    }
+      .bg {
+          background-image: url("/bg.png");
+          opacity: 0.2;
+          width: 200%;
+          height: 100%;
+          background-size: auto 100%;
+          animation: 8s ease-in-out infinite alternate slideBg;
+        }
   }
 
   .bot {
@@ -84,6 +84,25 @@
     height: 100%;
     object-fit: contain;
     animation: 3s ease-in-out infinite alternate botAnimate;
+  }
+
+  .chat {
+    position: absolute;
+    bottom: -30px;
+    right: -50px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 20px;
+    background-color: #2c2937;
+    border-radius: 10px;
+
+    img {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
   }
 
   .orbital {
