--- a/src/routes/homepage/homepage.css
+++ b/src/routes/homepage/homepage.css
@@ -4,40 +4,51 @@
   gap: 100px;
   height: 100%;
 
+   @media screen and (max-width: 1024px) {
+    flex-direction: column;
+    gap: 0;
+  }
+
   .left {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     gap: 16px;
-    text-align: cneter;
-  }
+    text-align: center;
 
-  h1 {
-    font-size: 128px;
-    background: linear-gradient(to right, #217bfe, #e55571);
-    background-clip: text;
-    --webkit-background-clip: text;
-    color: transparent;
-  }
+    h1 {
+      font-size: 128px;
+      background: linear-gradient(to right, #217bfe, #e55571);
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
 
-  h3 {
-    font-weight: 400;
-    max-width: 70%;
-  }
+      @media screen and (max-width: 1280px) {
+        font-size: 64px;
+      }
+    }
+    h3 {
+      font-weight: 400;
+      max-width: 70%;
 
-  a {
-    padding: 15px 25px;
-    background-color: #217bfe;
-    color: white;
-    border-radius: 20px;
-    font-size: 14px;
-    margin-top: 20px;
+      @media screen and (max-width: 1024px) {
+        max-width: 100%;
+      }
+    }
+    a {
+      padding: 15px 25px;
+      background-color: #217bfe;
+      color: white;
+      border-radius: 20px;
+      font-size: 14px;
+      margin-top: 20px;
 
-    &:hover {
-      background-color: white;
-      color: #217bfe;
+      &:hover {
+        background-color: white;
+        color: #217bfe;
+      }
     }
   }
 
@@ -97,6 +108,14 @@
     background-color: #2c2937;
     border-radius: 10px;
 
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
+
+    @media screen and (max-width: 1024px) {
+      right: 0;
+    }
+
     img {
       width: 32px;
       height: 32px;
@@ -111,6 +130,30 @@
     left: 0;
     opacity: 0.1;
     animation: 25s linear infinite rotateOrbital;
+    z-index: -1;
+  }
+
+  .terms {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    img {
+      width: 16px;
+      height: 16px;
+    }
+
+    .links {
+      display: flex;
+      gap: 10px;
+      color: #888;
+      font-size: 10px;
+    }
   }
 }
 
