--- a/src/components/chatList/chatList.css
+++ b/src/components/chatList/chatList.css
@@ -32,4 +32,32 @@
             background-color: #2c2937;
         }
     }
+
+    .upgrade {
+        margin-top: auto;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 12px;
+
+        img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .texts {
+            display: flex;
+            flex-direction: column;
+
+            span {
+                &:first-child {
+                    font-weight: 600;
+                }
+
+                &:last-child {
+                    color: #888;
+                }
+            }
+        }
+    }
 }
