--- a/src/routes/chatPage/chatPage.css
+++ b/src/routes/chatPage/chatPage.css
@@ -1,32 +1,37 @@
-.chatPage {
+.chatPage{
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
-
-    .wrapper {
-        flex: 1;
-        overflow: scroll;
-        width: 100%;
+  
+    .wrapper{
+      flex:1;
+      overflow: auto;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+  
+      .chat{
+        width: 60%;
         display: flex;
-        justify-content: center;
-
-        .chat {
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-
-            .message {
-                padding: 20px;
-
-                &.user {
-                    background-color: #2c2937;
-                    border-radius: 20px;
-                    max-width: 80%;
-                    align-self: flex-end;
-                }
-            }
+        flex-direction: column;
+        gap: 20px;
+  
+        p,li{
+          margin: 10px 0px;
         }
+  
+        .message{
+          padding: 20px;
+  
+          &.user{
+            background-color: #2c2937;
+            border-radius: 20px;
+            max-width: 80%;
+            align-self: flex-end;
+          }
+        }
+      }
     }
-}
+  }
